--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "assignment3",
+  "name": "library-management-api",
   "version": "1.0.0",
   "main": "./src/server.ts",
   "scripts": {
+    "start": "node ./dist/server.js",
     "dev": " ts-node-dev --respawn --transpile-only ./src/server.ts",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Md Abdus Salam suhag",
